# pyworkflow-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  .webui_secret_key  CHANGELOG.md  LICENSE  MIGRATION.md  PROJECT_STATUS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: README.md  __init__.py  manifest.yaml
agents/_template/: __init__.py  agent_example.py
agents/analysts/: __init__.py  data_analyst.py
agents/assistants/: __init__.py  general_assistant.py
agents/coders/: __init__.py  code_reviewer.py
agents/orchestrators/: __init__.py  pipeline_planner.py
agents/researchers/: __init__.py  doc_researcher.py
agents/shared/: __init__.py  configs.py  guardrails.py  handoff.py  loader.py  pipeline.py  runner.py  tool_sets.py
docs/: AUDIT_PRODUCTION_READINESS.md  README_v1.md  analyse_critique_pyworkflow.md  architecture.md  architecture_critique.md  architecture_critique_v2.md  project_status.md
docs/changelog/: 2026-04-10-action-plan-v030.md  2026-04-10-architecture-refactoring-proposal.md  2026-04-10_adr-001_naming-decision.md  2026-04-10_adr_003_architecture-critique-integration.md  2026-04-11-decorator-api.md  2026-04-11-import-style-and-config-module.md  2026-04-11_adr_005_decorator-api.md  2026-04-11_adr_006_hexagonal-ports-adapters.md  2026-04-11_adr_007_celery-adapter-integration.md  2026-04-11_adr_008_cli-adapter-typer-rich.md  2026-04-11_adr_009_tui-adapter-textual-rich.md  2026-04-11_adr_010_gui-adapter-nicegui.md  2026-04-11_adr_011_api-adapter-fastapi-sqlite.md  2026-04-12_adr_012_rename-storage-to-storage.md  2026-04-12_adr_013_ai-engine-integration-strategy.md  2026-04-12_adr_014_pipeline-model-and-decorator-api.md  2026-04-12_adr_015_unified-ai-pipeline-integration.md  2026-04-12_adr_016_master-integration-plan.md  2026-04-12_adr_017_unified-persistence-layer.md  2026-04-12_adr_018_models-reorganization-and-table-namespacing.md  2026-04-12_adr_019_agents-catalog-directory.md  2026-04-12_adr_020_agent-framework-strategy.md  2026-04-12_adr_021_agent-framework-industry-comparison.md  2026-04-12_adr_022_framework-adapter-integration-patterns.md  2026-04-12_adr_023_knowledge-rag-architecture.md  2026-04-14_adr_024_scheduling-implementation.md  2026-04-16_adr_025_data-pipeline-codes-droit.md  README.md
docs/connectors/: README.md  architecture.md  examples.md  quickstart.md
docs/data-plateforme/: 01-organisation-jobs.md  02-architecture-couches.md  03-patterns-conventions.md  04-datalake-local-et-pipelines.md  README.md  pipeline-codes-droit.md
docs/guides/: 2026-04-10-action-plan-v030.md  PHASE_1_WEEK_4_SUMMARY.md  PHASE_2_PERSISTENCE_SUMMARY.md  debugging-adapters-cli-api.md  implementation-plan-v2.md  implementation-plan.md  logging-implementation-summary.md  logging.md  migration-pure-python.md  millestone.md  rag-juridique.md  scheduling.md
docs/project/: MIGRATION_from_ias-to-py.md  PROJECT_STATUS-10-03-2026.md  PROJECT_STATUS_10-04-2026.md  PROJECT_STATUS_11-04-2026.md
examples/: README.md  __init__.py  agent_chat.py  agent_persistence_demo.py  agent_with_persistence.py  ai_storage_demo.py  basic_etl.py  celery_distributed.py  connector_http_smoke_test.py  decorator_api.py  gui_decorator_demo copy.py  gui_decorator_demo.py  gui_demo.py  human_approval.py  logging_advanced.py  logging_basics.py  migration_success_demo.py  parallel_processing.py  persistence_backends.py  persistence_simple.py  simple_examples.py  simple_retry_test.py  storage_backends.py  storage_simple.py  timeout_and_executors.py  triggers.py  tui_demo.py
jobs/: README.md  __init__.py  manifest.yaml
jobs/ingestion/: README.md  __init__.py
jobs/llm/: __init__.py
jobs/ml/: __init__.py
jobs/ops/: __init__.py  heartbeat_email.py  schedule_status.py  scheduler_runner.py
jobs/reporting/: __init__.py
jobs/shared/: __init__.py  connections.py  datalake.py  loader.py  logging.py  notifications.py  persistence.py  timezone.py  validators.py  warehouse.py
jobs/transformation/: README.md  __init__.py
pipelines/: README.md  __init__.py
pipelines/daily/: __init__.py  books_to_dwh.py  strava_daily_coaching.py  stripe_to_dwh.py
pipelines/monthly/: __init__.py
pipelines/on_demand/: __init__.py
pipelines/shared/: __init__.py  notifications.py  runner.py
pipelines/weekly/: __init__.py  countries_to_dwh.py
pyconnectors/: __init__.py  api.py
pyconnectors/adapters/: __init__.py
pyconnectors/cli/: app.py
pyconnectors/config/: __init__.py  base.py  loaders.py  serializers.py
pyconnectors/connectors/: __init__.py  manifest.yaml
pyconnectors/contrib/: __init__.py  celery.py  django.py  fastapi.py  streamlit.py
pyconnectors/models/: __init__.py  async_base.py  base.py  enums.py  exceptions.py  lifecycle.py  result.py  specs.py
pyconnectors/ports/: __init__.py  auth_strategy.py  logger.py  registry.py
pyconnectors/services/: __init__.py  connector_service.py  factory.py  loader.py
resources/: github.txt
scripts/: cleanup_old_tables.sql  migrate_ai_table_prefix.sql  validate.py
scripts/bash/: rename_persistence_to_storage.sh
scripts/python/: migrate.py
src/ias_workflow_engine/: __init__.py
src/pyworkflow_engine/: __init__.py  exceptions.py  facade.py
tests/: _test_aggrid.py
tests/integration/: test_decorator_workflow.py  test_parallel_runner.py  test_persistence_roundtrip.py  test_pipeline_execution.py  test_storage_roundtrip.py
tests/storage/: __init__.py  test_logging_persistence.py  test_repository.py  test_schema_generator.py  test_unified_storage.py
tests/unit/: __init__.py  test_agents_catalog.py  test_agents_runner.py  test_celery_adapter.py  test_config.py  test_connector_models.py  test_core_models.py  test_coverage_boost.py  test_dag_resolver.py  test_decorators.py  test_event_bus.py  test_gui_adapter.py  test_ingestion_imf.py  test_ingestion_restcountries.py  test_logging.py  test_logging_utils.py  test_persistence.py  test_pipeline_decorator.py  test_pipeline_models.py  test_retry_mechanisms.py  test_sqlite_ai_storage.py  test_storage.py  test_timeout_and_executors.py  test_workflow_engine.py
(+451 files in other folders)
