[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyworkflow-engine"
version = "0.7.0"
description = "PyWorkflow Engine - Library-first workflow orchestration with zero framework dependencies"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Thomas AWOUNFOUET", email = "dev@awounfouet.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

# ⚠️ ZERO dépendance obligatoire pour le core
dependencies = []

[project.optional-dependencies]
# Adapters — chaque intégration est opt-in
django = ["django>=4.2", "djangorestframework>=3.14"]
fastapi = ["fastapi>=0.100", "uvicorn>=0.20"]
celery = ["celery>=5.3", "redis>=5.0"]
streamlit = ["streamlit>=1.30"]
structlog = ["structlog>=24.0"]

# Persistence backends (optional)
sqlalchemy = ["sqlalchemy>=2.0"]
postgresql = ["sqlalchemy>=2.0", "psycopg2-binary>=2.9"]
mysql = ["sqlalchemy>=2.0", "PyMySQL>=1.0"]
snowflake = ["snowflake-connector-python>=3.0"]

# CLI
cli = ["typer>=0.9", "rich>=13.0"]

# API REST adapter (ADR-011)
api = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "sse-starlette>=2.0"]

# TUI adapter (ADR-009)
tui = ["textual>=1.0", "rich>=13.0"]

# GUI adapter (ADR-010)
gui = ["nicegui>=2.0"]

# Data Platform (jobs + pipelines)
dataplatform = ["duckdb>=1.0", "pyarrow>=15.0"]
dataplatform-pg = ["psycopg2-binary>=2.9"]
dataplatform-stripe = ["stripe>=8.0"]
dataplatform-scraping = ["requests>=2.31", "beautifulsoup4>=4.12", "lxml>=5.0"]

# Dev / Tests
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
    "uv>=0.1.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

# Tout installer
all = [
    "pyworkflow-engine[django,fastapi,celery,sqlalchemy,postgresql,mysql,snowflake,streamlit,structlog,cli,api,tui,gui]",
]

[project.scripts]
pyworkflow = "pyworkflow_engine.adapters.cli.main:app"

[project.urls]
Homepage = "https://github.com/awf/pyworkflow-engine"
Documentation = "https://awf.github.io/pyworkflow-engine"
Repository = "https://github.com/awf/pyworkflow-engine"

[tool.hatch.build.targets.wheel]
packages = ["src/pyworkflow_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "jobs", "pipelines"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--cov=pyworkflow_engine",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "jobs", "pipelines"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "C4", "PIE", "TID"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]          # Allow assert statements in tests
"**/__init__.py" = ["TID252"]    # Re-exports relatifs tolérés dans les __init__.py
"jobs/**/*" = ["S608"]           # SQL injection check relaxed for DWH queries
"pipelines/**/*" = ["S608"]      # SQL injection check relaxed for DWH queries

# ADR-004 — interdire les imports relatifs hors __init__.py (ban-relative-imports = "parents")
# Passer à "all" une fois la migration complète vers les imports absolus.
[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
disallow_untyped_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "duckdb>=1.5.1",
    "structlog>=25.5.0",
]
